fixed scrolling overflow for graph container (#11)

--- a/css/widget.css
+++ b/css/widget.css
@@ -1,5 +1,5 @@
 #widgetContainer{
-  height:335px;
+  height:340px;
   width:100%;
   display:inline-flex;
 }
@@ -31,7 +31,7 @@ input[type=text], select {
   /* padding-left: 20px; */
   /* padding-top: 10px; */
   /* height: 100%; */
-  height: 280px;
+  height: 300px;
   box-sizing: border-box;
   width: 100%;
   position: relative;
@@ -97,7 +97,6 @@ input[type=text], select {
   max-height: 270px;
   margin: 10px 0px 5px 5px;
   padding: 0px 0px 0px 0px;
-  overflow-y: auto;
 }
 #mainVizTitle{
   font-size: 20px;
